Updated the index.html to test.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 {% include about.html %}
+
+I am sharis, I have updated this index.html!.
 {% include work.html %}
 {% include client.html %}
 {% include contact.html %}
